--- a/img/corpus/ilfm_global_table.tex
+++ b/img/corpus/ilfm_global_table.tex
@@ -3,24 +3,15 @@
 
 \textbf{IBP} & pvalue & alpha & x\_min & n\_tail \\\midrule
 
-Manufacturing & 0.0 \(\pm\) 0.0 & 1.225 \(\pm\) 0.003 & 1.0 \(\pm\)
-0.0 & 155.533 \(\pm\) 2.029 \\
-UC Irvine & 1.0 \(\pm\) 0.0 & 1.345 \(\pm\) 0.002 & 1.0 \(\pm\)
-0.0 & 1784.2 \(\pm\) 8.927 \\
-Blogs & 1.0 \(\pm\) 0.0 & 1.336 \(\pm\) 0.002 & 1.0 \(\pm\)
-0.0 & 1376.333 \(\pm\) 8.673 \\
-Emaileu & 0.024 \(\pm\) 0.027 & 1.257 \(\pm\) 0.001 & 1.0 \(\pm\)
-0.0 & 964.467 \(\pm\) 5.194 \\
-Protein & 1.0 \(\pm\) 0.0 & 1.572 \(\pm\) 0.006 & 1.0 \(\pm\)
-0.0 & 1544.333 \(\pm\) 14.961 \\
-Network 1 & 1.0 \(\pm\) 0.0 & 1.408 \(\pm\) 0.003 & 1.0 \(\pm\)
-0.0 & 930.0 \(\pm\) 5.727 \\
-Network 2 & 1.0 \(\pm\) 0.0 & 1.45 \(\pm\) 0.005 & 1.0 \(\pm\)
-0.0 & 897.567 \(\pm\) 7.645 \\
-Network 3 & 0.003 \(\pm\) 0.008 & 1.304 \(\pm\) 0.001 & 1.0 \(\pm\)
-0.0 & 984.5 \(\pm\) 2.941 \\
-Network 4 & 0.0 \(\pm\) 0.0 & 1.199 \(\pm\) 0.01 & 1.033 \(\pm\)
-0.18 & 998.633 \(\pm\) 1.11 \\
+Manufacturing & 0.0 \(\pm\) 0.0 & 1.225 \(\pm\) 0.003 & 1.0 \(\pm\) 0.0 & 155.533 \(\pm\) 2.029 \\
+UC Irvine & 1.0 \(\pm\) 0.0 & 1.345 \(\pm\) 0.002 & 1.0 \(\pm\) 0.0 & 1784.2 \(\pm\) 8.927 \\
+Blogs & 1.0 \(\pm\) 0.0 & 1.336 \(\pm\) 0.002 & 1.0 \(\pm\) 0.0 & 1376.333 \(\pm\) 8.673 \\
+Emaileu & 0.024 \(\pm\) 0.027 & 1.257 \(\pm\) 0.001 & 1.0 \(\pm\) 0.0 & 964.467 \(\pm\) 5.194 \\
+Protein & 1.0 \(\pm\) 0.0 & 1.572 \(\pm\) 0.006 & 1.0 \(\pm\) 0.0 & 1544.333 \(\pm\) 14.961 \\
+Network 1 & 1.0 \(\pm\) 0.0 & 1.408 \(\pm\) 0.003 & 1.0 \(\pm\) 0.0 & 930.0 \(\pm\) 5.727 \\
+Network 2 & 1.0 \(\pm\) 0.0 & 1.45 \(\pm\) 0.005 & 1.0 \(\pm\) 0.0 & 897.567 \(\pm\) 7.645 \\
+Network 3 & 0.003 \(\pm\) 0.008 & 1.304 \(\pm\) 0.001 & 1.0 \(\pm\) 0.0 & 984.5 \(\pm\) 2.941 \\
+Network 4 & 0.0 \(\pm\) 0.0 & 1.199 \(\pm\) 0.01 & 1.033 \(\pm\) 0.18 & 998.633 \(\pm\) 1.11 \\
 
 \bottomrule
 \end{tabular}
