--- a/img/corpus/immsb_global_table.tex
+++ b/img/corpus/immsb_global_table.tex
@@ -3,24 +3,15 @@
 
 \textbf{IMMSB} & pvalue & alpha & x\_min & n\_tail \\\midrule
 
-Manufacturing & 0.003 \(\pm\) 0.004 & 1.233 \(\pm\) 0.002 & 1.0 \(\pm\)
-0.0 & 164.4 \(\pm\) 1.837 \\
-UC Irvine & 1.0 \(\pm\) 0.0 & 1.342 \(\pm\) 0.002 & 1.0 \(\pm\)
-0.0 & 1845.4 \(\pm\) 7.446 \\
-Blogs & 1.0 \(\pm\) 0.0 & 1.336 \(\pm\) 0.002 & 1.0 \(\pm\) 0.0 & 1443.4
-\(\pm\) 4.991 \\
-Emaileu & 0.0 \(\pm\) 0.0 & 1.362 \(\pm\) 0.044 & 2.567 \(\pm\)
-0.667 & 1004.0 \(\pm\) 0.0 \\
-Protein & 1.0 \(\pm\) 0.0 & 1.516 \(\pm\) 0.003 & 1.0 \(\pm\)
-0.0 & 2062.267 \(\pm\) 6.598 \\
-Network 1 & 0.917 \(\pm\) 0.103 & 1.396 \(\pm\) 0.004 & 1.0 \(\pm\)
-0.0 & 991.367 \(\pm\) 2.401 \\
-Network 2 & 1.0 \(\pm\) 0.0 & 1.447 \(\pm\) 0.004 & 1.0 \(\pm\)
-0.0 & 971.933 \(\pm\) 4.396 \\
-Network 3 & 0.0 \(\pm\) 0.0 & 1.294 \(\pm\) 0.001 & 1.0 \(\pm\)
-0.0 & 998.467 \(\pm\) 1.024 \\
-Network 4 & 0.0 \(\pm\) 0.0 & 1.282 \(\pm\) 0.05 & 3.7 \(\pm\)
-1.656 & 1000.0 \(\pm\) 0.0 \\
+Manufacturing & 0.003 \(\pm\) 0.004 & 1.233 \(\pm\) 0.002 & 1.0 \(\pm\) 0.0 & 164.4 \(\pm\) 1.837 \\
+UC Irvine & 1.0 \(\pm\) 0.0 & 1.342 \(\pm\) 0.002 & 1.0 \(\pm\) 0.0 & 1845.4 \(\pm\) 7.446 \\
+Blogs & 1.0 \(\pm\) 0.0 & 1.336 \(\pm\) 0.002 & 1.0 \(\pm\) 0.0 & 1443.4 \(\pm\) 4.991 \\
+Emaileu & 0.0 \(\pm\) 0.0 & 1.362 \(\pm\) 0.044 & 2.567 \(\pm\) 0.667 & 1004.0 \(\pm\) 0.0 \\
+Protein & 1.0 \(\pm\) 0.0 & 1.516 \(\pm\) 0.003 & 1.0 \(\pm\) 0.0 & 2062.267 \(\pm\) 6.598 \\
+Network 1 & 0.917 \(\pm\) 0.103 & 1.396 \(\pm\) 0.004 & 1.0 \(\pm\) 0.0 & 991.367 \(\pm\) 2.401 \\
+Network 2 & 1.0 \(\pm\) 0.0 & 1.447 \(\pm\) 0.004 & 1.0 \(\pm\) 0.0 & 971.933 \(\pm\) 4.396 \\
+Network 3 & 0.0 \(\pm\) 0.0 & 1.294 \(\pm\) 0.001 & 1.0 \(\pm\) 0.0 & 998.467 \(\pm\) 1.024 \\
+Network 4 & 0.0 \(\pm\) 0.0 & 1.282 \(\pm\) 0.05 & 3.7 \(\pm\) 1.656 & 1000.0 \(\pm\) 0.0 \\
 
 \bottomrule
 \end{tabular}
