--- a/img/corpus/immsb_local_table.tex
+++ b/img/corpus/immsb_local_table.tex
@@ -3,24 +3,15 @@
 
 \textbf{IMMSB} & pvalue & alpha & x\_min & n\_tail \\\midrule
 
-Manufacturing & 0.998 \(\pm\) 0.003 & 1.769 \(\pm\) 0.239 & 1.0 \(\pm\)
-0.0 & 42.938 \(\pm\) 10.969 \\
-UC Irvine & 1.0 \(\pm\) 0.0 & 3.468 \(\pm\) 1.28 & 1.0 \(\pm\)
-0.0 & 348.25 \(\pm\) 98.568 \\
-Blogs & 1.0 \(\pm\) 0.0 & 4.462 \(\pm\) 0.923 & 1.0 \(\pm\)
-0.0 & 212.533 \(\pm\) 60.408 \\
-Emaileu & 1.0 \(\pm\) 0.0 & 3.193 \(\pm\) 0.971 & 1.0 \(\pm\)
-0.0 & 335.304 \(\pm\) 111.983 \\
-Protein & None \(\pm\) None & None \(\pm\) None & None \(\pm\)
-None & None \(\pm\) None \\
-Network 1 & 1.0 \(\pm\) 0.0 & 2.912 \(\pm\) 1.376 & 1.0 \(\pm\)
-0.0 & 145.467 \(\pm\) 68.895 \\
-Network 2 & 0.999 \(\pm\) 0.002 & 3.21 \(\pm\) 1.259 & 1.0 \(\pm\)
-0.0 & 109.75 \(\pm\) 54.661 \\
-Network 3 & 1.0 \(\pm\) 0.0 & 2.637 \(\pm\) 0.584 & 1.0 \(\pm\)
-0.0 & 173.667 \(\pm\) 38.348 \\
-Network 4 & 1.0 \(\pm\) 0.0 & 1.751 \(\pm\) 0.207 & 1.0 \(\pm\)
-0.0 & 357.516 \(\pm\) 76.535 \\
+Manufacturing & 0.998 \(\pm\) 0.003 & 1.769 \(\pm\) 0.239 & 1.0 \(\pm\) 0.0 & 42.938 \(\pm\) 10.969 \\
+UC Irvine & 1.0 \(\pm\) 0.0 & 3.468 \(\pm\) 1.28 & 1.0 \(\pm\) 0.0 & 348.25 \(\pm\) 98.568 \\
+Blogs & 1.0 \(\pm\) 0.0 & 4.462 \(\pm\) 0.923 & 1.0 \(\pm\) 0.0 & 212.533 \(\pm\) 60.408 \\
+Emaileu & 1.0 \(\pm\) 0.0 & 3.193 \(\pm\) 0.971 & 1.0 \(\pm\) 0.0 & 335.304 \(\pm\) 111.983 \\
+Protein & None \(\pm\) None & None \(\pm\) None & None \(\pm\) None & None \(\pm\) None \\
+Network 1 & 1.0 \(\pm\) 0.0 & 2.912 \(\pm\) 1.376 & 1.0 \(\pm\) 0.0 & 145.467 \(\pm\) 68.895 \\
+Network 2 & 0.999 \(\pm\) 0.002 & 3.21 \(\pm\) 1.259 & 1.0 \(\pm\) 0.0 & 109.75 \(\pm\) 54.661 \\
+Network 3 & 1.0 \(\pm\) 0.0 & 2.637 \(\pm\) 0.584 & 1.0 \(\pm\) 0.0 & 173.667 \(\pm\) 38.348 \\
+Network 4 & 1.0 \(\pm\) 0.0 & 1.751 \(\pm\) 0.207 & 1.0 \(\pm\) 0.0 & 357.516 \(\pm\) 76.535 \\
 
 \bottomrule
 \end{tabular}
