--- a/t/auc.tex
+++ b/t/auc.tex
@@ -3,55 +3,55 @@
         \centering
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_network1}
+            \includegraphics[width=\textwidth]{img/corpus/roc_network1_20}
             \label{fig:mean and std of net14}
             \caption {{\small Network1}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_network2}
+            \includegraphics[width=\textwidth]{img/corpus/roc_network2_20}
             \label{fig:mean and std of net14}
             \caption {{\small Network2}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_network3}
+            \includegraphics[width=\textwidth]{img/corpus/roc_network3_20}
             \label{fig:mean and std of net14}
             \caption {{\small Network3}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_network4}
+            \includegraphics[width=\textwidth]{img/corpus/roc_network4_20}
             \label{fig:mean and std of net14}
             \caption {{\small Network4}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_manufacturing}
+            \includegraphics[width=\textwidth]{img/corpus/roc_manufacturing_20}
             \label{fig:mean and std of net14}
             \caption {{\small Manufacturing}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_ucirvine}
+            \includegraphics[width=\textwidth]{img/corpus/roc_ucirvine_20}
             \label{fig:mean and std of net14}
             \caption {{\small Manufacturing}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_blogs}
+            \includegraphics[width=\textwidth]{img/corpus/roc_blogs_20}
             \caption {{\small Blogs}}    
             \label{fig:mean and std of net14}
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_emaileu}
+            \includegraphics[width=\textwidth]{img/corpus/roc_emaileu_20}
             \caption {{\small Email Europe}}    
             \label{fig:mean and std of net14}
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_protein}
+            \includegraphics[width=\textwidth]{img/corpus/roc_protein_20}
             \caption {{\small Protein}}    
             \label{fig:mean and std of net14}
         \end{subfigure}
