--- a/short_version/experimentations.tex
+++ b/short_version/experimentations.tex
@@ -60,18 +60,18 @@ In our experiments, we consider two artificial networks and two real networks.  
 The artificial networks have been generated with DANC-Generator \cite{largeron2015}. This generator has been chosen because it allows to build an attributed graph having a community structure  and  the known properties of real-world networks such as preferential attachment and homophily.
 Moreover, by modifying the parameters, these properties can be weakened. Finally, DANC-Generator is available under the terms of the GNU Public License and the parameters can be shared for experiments reproducibility. \textcolor{red}{Heeere, words about my platform (pymake) to share and reproduce and create new experiments}.
 
-Two artificial networks (Network1 and Network4) have been generated. Their adjacency matrices and global degree distributions are presented in Figure \ref{fig:corpuses}. Table \ref{table:synt_graph} gives the resulting $p$-value of the KS test as well as the  values estimated for the parameters  $\alpha$ and $x_\text{min}$,  and  the number $n_{tail}$ of observations in the distribution such as $x \geq x_\text{min}$ . For each network, Figure \ref{fig:synt_graph_local} represents the local degree distribution associated to each \emph{ground truth} community and Table \ref{table:synt_graph_local} reports the KS results in the local case. The inner degree distribution (edges inside a community) and outer degree distribution (edges between community) are plotted separately.
+Two artificial networks (Network1 and Network4) have been generated. Their adjacency matrices and global degree distributions are presented in Figure \ref{fig:corpuses}. Table \ref{table:me_gofit} gives the resulting $p$-value of the KS test as well as the  values estimated for the parameters  $\alpha$ and $x_\text{min}$,  and  the number $n_{tail}$ of observations in the distribution such as $x \geq x_\text{min}$ . For each network, Figure \ref{fig:synt_graph_local} represents the local degree distribution associated to each \emph{ground truth} community and Table \ref{table:me_gofit} reports the KS results in the local case. The inner degree distribution (edges inside a community) and outer degree distribution (edges between community) are plotted separately.
 
 Each network presents a different affinity to preferential attachment and homophily.
-Indeed, As shown Figure \ref{fig:corpuses}, Network1 verify the  preferential attachment whereas it is not the case for Network4. The results of the KS test given in Table \ref{table:synt_graph} confirm this analysis since the $p$-value is very high for Network1 and low for Network4, respectively equals to 1 and 0.
+Indeed, As shown Figure \ref{fig:corpuses}, Network1 verify the  preferential attachment whereas it is not the case for Network4. The results of the KS test given in Table \ref{table:me_gofit} confirm this analysis since the $p$-value is very high for Network1 and low for Network4, respectively equals to 1 and 0.
 
-Concerning the local preferential attachment, that can be evaluated on these artificial networks where the ground truth communities are provided by the generator, the local degree distributions per class are given in Figure \ref{fig:synt_graph_local} and the average results (and variances) for the p-value computed over the classes are reported in Table \ref{table:synt_graph_local}. They show that the local preferential attachment is verified the first networks and in a lesser extend for the second. In particularly, the high variance of the $p$-value for Network3 and Network4 indicates that the property varies among the classes. (not reported here).
+Concerning the local preferential attachment, that can be evaluated on these artificial networks where the ground truth communities are provided by the generator, the local degree distributions per class are given in Figure \ref{fig:synt_graph_local} and the average results (and variances) for the p-value computed over the classes are reported in Table \ref{table:me_gofit}. They show that the local preferential attachment is verified the first networks and in a lesser extend for the second. In particularly, the high variance of the $p$-value for Network3 and Network4 indicates that the property varies among the classes. (not reported here).
 
 We evaluated also the models on two real world networks.
 The first one, denoted Blogs \footnote{available at: http://moreno.ss.uci.edu/data.html\#blogs}, contains front-page hyperlinks between blogs in the context of the 2004 US election. A node represents a blog and an edge represents a hyperlink between two blogs.
 The second one, denoted Manufacturing \footnote{available at: https://www.ii.pwr.edu.pl/~michalski/index.php?content=datasets\#manufacturing}, is an internal email communication network between employees of a mid-sized manufacturing company. Each vertex is associated  to an employee and an oriented link represents like previously a sent email.
 
-The adjacency matrices and global degree distributions are presented in Figure \ref{fig:corpuses}. The goodness of fit based on the KS test, used as a reference for the global preferential attachment effect, is reported in Table \ref{table:synt_graph}. According to Figure \ref{fig:corpuses} as well as Table \ref{table:synt_graph}, it appears that the preferential attachment property is verified in Blogs, with a high p-value, and not in Manufacturing where the p-value is null. As the ground truth is not available for these networks, the local preferential attachment can not be verified.
+The adjacency matrices and global degree distributions are presented in Figure \ref{fig:corpuses}. The goodness of fit based on the KS test, used as a reference for the global preferential attachment effect, is reported in Table \ref{table:me_gofit}. According to Figure \ref{fig:corpuses} as well as Table \ref{table:me_gofit}, it appears that the preferential attachment property is verified in Blogs, with a high p-value, and not in Manufacturing where the p-value is null. As the ground truth is not available for these networks, the local preferential attachment can not be verified.
 
 \input{\lpath/t/a.tex}
 \input{\lpath/t/b.tex}
