--- a/long_version/main.tex
+++ b/long_version/main.tex
@@ -24,7 +24,7 @@
 
 
 %\input{./header.tex}
-\newcommand*{\lpath}{.}%
+\newcommand*{\lpath}{..}%
 %%%%%%%%%% Math
 \renewcommand{\text}{\textnormal}
 %\newcommand{\pr}{\mathbf{p}}
@@ -78,7 +78,7 @@ Prediction in Social Networks ?}
 \clearpage
 
 \bibliographystyle{unsrt}
-\bibliography{\lpath/a}
+\bibliography{a}
 
 \appendix
 \input{long_version/appendix}
