--- a/long_version/expe_dev.tex
+++ b/long_version/expe_dev.tex
@@ -33,7 +33,7 @@
  top=20mm,
  }
 
-\newcommand*{\lpath}{./}%
+\newcommand*{\lpath}{../}%
 
 \title{Networks Properties -- Experiments}
 
@@ -134,8 +134,8 @@ Each network presents a different affinity to preferential attachment and homoph
 Indeed, As shown Figure \ref{fig:synt_graph}, Network1 and Network2, and to a lesser extend, Network3 verify preferential attachment whereas it is not the case for Network4. The results of the KS test given in Table \ref{table:synt_graph} confirm this analysis since the $p$-value is very high for Network1 and Network2, respectively equals to 1 and 0.99 but it decreases for Network3 and is equal 0 for Network4.
 Concerning the local preferential attachment, that can be evaluated on these artificial networks where the ground truth communities are provided by the generator, the local degree distributions per class are given in Figure \ref{fig:synt_graph_local} and the average results (and variances) for the p-value computed over the classes are reported in Table \ref{table:synt_graph_local}. They show that the local preferential attachment is verified in the two first networks and in a lesser extend for the  last ones. In particularly, the high variance of the $p$-value for Network3 and Network4 indicates that the property varies among the classes.
 
-\input{\lpath/t/a.tex}
-\input{\lpath/t/b.tex}
+\input{t/a.tex}
+\input{t/b.tex}
 
 \begin{table}[h]
 \caption{Power law goodness of fit results for the global preferential attachment in artificial networks.}
@@ -188,7 +188,7 @@ The second one, denoted Manufacturing \footnote{available at:}, is an internal e
 
 The adjacency matrices and global degree distributions are presented in Figure \ref{fig:real_graph}. The goodness of fit based on the KS test, used as a reference for the global preferential attachment effect, is reported in Table \ref{table:real_graph}. According to Figure \ref{fig:real_graph} as well as Table \ref{table:real_graph}, it appears that the preferential attachment property is verified in UC Irvine, with a p-value equals to 0.989, and not in Manufacturing where the p-value is null. As the ground truth is not available for these networks, the local preferential attachment can not be verified.
 
-\input{\lpath/t/c.tex}
+\input{t/c.tex}
 
 \begin{table}
 \caption{Power law goodness of fit results for the global degree attachment in real networks.}
@@ -227,8 +227,8 @@ The global degree distribution of the  networks generated with  IMMSB and ILFM a
 IMMSB and ILFM pass the goodness of fit test for Network1*, Network2* and UC Irvine* with high p-value (0.907 or 1) but that is not the case  for the three other networks (Network3*, Network4* and Manufacturing*) with a p-value near or equals to zero. This shows that even if the models IMMSB and ILFM  are neutral with respect to global preferential attachment, they are able to generate  networks having the property,  when this property is strongly verified in the original network used to learn the parameters.
 \textbf{ARV} When the global preferential attachment is less strong, as for Network3, we can noticed if we consider the tail of the generated distributions, ILFM appears to have straight tail than ILFM.
 
-\input{\lpath/t/me_fit_gburst_mmsb}
-\input{\lpath/t/me_fit_gburst_ilfm}
+\input{t/me_fit_gburst_mmsb}
+\input{t/me_fit_gburst_ilfm}
 
 \begin{table}
     \caption{Power law Goodness of fit for the \textbf{global} preferential attachment effect.}
@@ -250,8 +250,8 @@ logarithmic plot for every network generated with IMMSB whereas it is not the ca
 \textcolor{red}{here comment...} ~\\
 \textcolor{red}{x\_min could be removed from table, I explains earlier how I choose it.}
 
-\input{\lpath/t/me_fit_lburst_mmsb}
-\input{\lpath/t/me_fit_lburst_ilfm}
+\input{t/me_fit_lburst_mmsb}
+\input{t/me_fit_lburst_ilfm}
 
 
 \begin{table}
@@ -308,9 +308,9 @@ In order to evaluate the  prediction performance of the models, we built a train
 \textbf{arevoir}
 Each prediction results were averaged on 10 repetitions, and results were found to be stable regarding on the random  initialization and the stochastic optimization procedure. 
 
-\input{\lpath/t/table_results}
+\input{t/table_results}
 
-\input{\lpath/t/auc}
+\input{t/auc}
 
 \subsubsection{Comments}
 
@@ -323,6 +323,6 @@ Each prediction results were averaged on 10 repetitions, and results were found 
 
 
 \bibliographystyle{unsrt}
-\bibliography{./a}
+\bibliography{a}
 
 \end{document}
