--- a/long_version/main.tex
+++ b/long_version/main.tex
@@ -64,24 +64,24 @@ Prediction in Social Networks ?}
 
 \IEEEpeerreviewmaketitle
 
-\input{long_version/intro.tex}
+\input{intro.tex}
 %\input{motiv.tex}
-\input{long_version/background.tex}
-\input{long_version/models.tex}
-\input{long_version/homophily.tex}
-\input{long_version/burstiness.tex}
-\input{long_version/dynamic.tex}
-\input{long_version/sparsity.tex}
-\input{long_version/expe.tex}
-\input{long_version/related_work.tex}
-\input{long_version/conclusion.tex}
+\input{background.tex}
+\input{models.tex}
+\input{homophily.tex}
+\input{burstiness.tex}
+\input{dynamic.tex}
+\input{sparsity.tex}
+\input{expe.tex}
+\input{related_work.tex}
+\input{conclusion.tex}
 \clearpage
 
 \bibliographystyle{unsrt}
 \bibliography{a}
 
 \appendix
-\input{long_version/appendix}
+\input{appendix}
 
 \end{document}
 
