--- a/long_version/t/c.tex
+++ b/long_version/t/c.tex
@@ -3,8 +3,8 @@
 %        \centering
 %        \begin{subfigure}[b]{0.400\textwidth}
 %            \centering
-%            \includegraphics[scale=0.38]{img/corpus/fb_uc.png}
-%            \includegraphics[scale=0.38]{img/corpus/manufacturing.png}
+%            \includegraphics[scale=0.38]{\lpath/img/corpus/fb_uc.png}
+%            \includegraphics[scale=0.38]{\lpath/img/corpus/manufacturing.png}
 %            \caption {{\small Adjacency matrix}}    
 %            \label{fig:mean and std of net14}
 %        \end{subfigure}
@@ -12,8 +12,8 @@
 %        \quad
 %        \begin{subfigure}[b]{0.400\textwidth}  
 %            \centering 
-%            \includegraphics[scale=0.42]{img/corpus/fb_uc_d.png}
-%            \includegraphics[scale=0.42]{img/corpus/manufacturing_d.png}
+%            \includegraphics[scale=0.42]{\lpath/img/corpus/fb_uc_d.png}
+%            \includegraphics[scale=0.42]{\lpath/img/corpus/manufacturing_d.png}
 %            \caption {{\small Overall degree distributions}}    
 %            \label{fig:mean and std of net24}
 %        \end{subfigure}
@@ -25,40 +25,40 @@
         \centering
         \begin{subfigure}[b]{0.480\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/manufacturing_dd}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/manufacturing_dd}
             \caption {{\small Manufacturing}}    
             \label{fig:mean and std of net14}
         \end{subfigure}
         \hfill
         \begin{subfigure}[b]{0.480\textwidth}  
             \centering 
-            \includegraphics[width=\textwidth]{img/corpus/fb_uc_dd}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/fb_uc_dd}
             \caption {{\small UC Irvine}}    
             \label{fig:mean and std of net24}
         \end{subfigure}
         \vskip\baselineskip
         \begin{subfigure}[b]{0.480\textwidth}   
             \centering 
-            \includegraphics[width=\textwidth]{img/corpus/blogs_dd}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/blogs_dd}
             \caption{{\small Blogs}}    
             \label{fig:mean and std of net34}
         \end{subfigure}
         \quad
         \begin{subfigure}[b]{0.480\textwidth}   
             \centering 
-            \includegraphics[width=\textwidth]{img/corpus/emaileu_dd}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/emaileu_dd}
             \caption{{\small Emaileu}}    
             \label{fig:mean and std of net44}
         \end{subfigure}
         \begin{subfigure}[b]{0.480\textwidth}   
             \centering 
-            \includegraphics[width=\textwidth]{img/corpus/propro_dd}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/propro_dd}
             \caption{{\small Protein}}    
             \label{fig:mean and std of net44}
         \end{subfigure}
         %\begin{subfigure}[b]{0.480\textwidth}   
         %    \centering 
-        %    \includegraphics[width=\textwidth]{img/corpus/euroroad_dd}
+        %    \includegraphics[width=\textwidth]{\lpath/img/corpus/euroroad_dd}
         %    \caption{{\small Euroroad}}    
         %    \label{fig:mean and std of net44}
         %\end{subfigure}
