--- a/long_version/t/me_fit_gburst_ilfm.tex
+++ b/long_version/t/me_fit_gburst_ilfm.tex
@@ -3,50 +3,50 @@
         \centering
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_network1_0}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_network1_0}
             \caption {{\small Network1}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_network2_0}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_network2_0}
             \caption {{\small Network2}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_network3_0}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_network3_0}
             \caption {{\small Network3}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_network4_0}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_network4_0}
             \caption {{\small Network4}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_manufacturing_0}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_manufacturing_0}
             \caption {{\small Manufacturing}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_ucirvine_0}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_ucirvine_0}
             \caption {{\small UC Irvine}}    
             \label{fig:mean and std of net14}
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_blogs_0}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_blogs_0}
             \caption {{\small Blogs}}    
             \label{fig:mean and std of net14}
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_emaileu_0}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_emaileu_0}
             \caption {{\small Email Europe}}    
             \label{fig:mean and std of net14}
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_protein_0}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_protein_0}
             \caption {{\small Protein}}    
             \label{fig:mean and std of net14}
         \end{subfigure}
