--- a/long_version/t/me_fit_lburst_ilfm.tex
+++ b/long_version/t/me_fit_lburst_ilfm.tex
@@ -3,50 +3,50 @@
         \centering
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_network1_1}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_network1_1}
             \caption {{\small Network1}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_network2_1}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_network2_1}
             \caption {{\small Network2}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_network3_1}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_network3_1}
             \caption {{\small Network3}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_network4_1}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_network4_1}
             \caption {{\small Network4}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_manufacturing_1}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_manufacturing_1}
             \caption {{\small Manufacturing}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_ucirvine_1}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_ucirvine_1}
             \caption {{\small UC Irvine}}    
             \label{fig:mean and std of net14}
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_blogs_1}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_blogs_1}
             \caption {{\small Blogs}}    
             \label{fig:mean and std of net14}
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_emaileu_1}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_emaileu_1}
             \caption {{\small Email Europe}}    
             \label{fig:mean and std of net14}
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/ilfm_protein_1}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/ilfm_protein_1}
             \caption {{\small Protein}}    
             \label{fig:mean and std of net14}
         \end{subfigure}
