--- a/long_version/t/table_expe.tex
+++ b/long_version/t/table_expe.tex
@@ -43,7 +43,7 @@
         \centering
         \begin{subfigure}[b]{0.475\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/dancer_1/figure_1}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/dancer_1/figure_1}
             \caption[Network2]%
             {{\small Network 1}}    
             \label{fig:mean and std of net14}
@@ -51,7 +51,7 @@
         \hfill
         \begin{subfigure}[b]{0.475\textwidth}  
             \centering 
-            \includegraphics[width=\textwidth]{img/corpus/dancer_2/figure_1}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/dancer_2/figure_1}
             \caption[]%
             {{\small Network 2}}    
             \label{fig:mean and std of net24}
@@ -59,7 +59,7 @@
         \vskip\baselineskip
         \begin{subfigure}[b]{0.475\textwidth}   
             \centering 
-            \includegraphics[width=\textwidth]{img/corpus/dancer_3/figure_1}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/dancer_3/figure_1}
             \caption[]%
             {{\small Network 3}}    
             \label{fig:mean and std of net34}
@@ -67,7 +67,7 @@
         \quad
         \begin{subfigure}[b]{0.475\textwidth}   
             \centering 
-            \includegraphics[width=\textwidth]{img/corpus/dancer_4/figure_1}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/dancer_4/figure_1}
             \caption[]%
             {{\small Network 4}}    
             \label{fig:mean and std of net44}
@@ -97,7 +97,7 @@
         \centering
         \begin{subfigure}[b]{0.475\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/dancer_1/figure_2}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/dancer_1/figure_2}
             \caption[Network2]%
             {{\small Network 1}}    
             \label{fig:mean and std of net14}
@@ -105,7 +105,7 @@
         \hfill
         \begin{subfigure}[b]{0.475\textwidth}  
             \centering 
-            \includegraphics[width=\textwidth]{img/corpus/dancer_2/figure_2}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/dancer_2/figure_2}
             \caption[]%
             {{\small Network 2}}    
             \label{fig:mean and std of net24}
@@ -113,7 +113,7 @@
         \vskip\baselineskip
         \begin{subfigure}[b]{0.475\textwidth}   
             \centering 
-            \includegraphics[width=\textwidth]{img/corpus/dancer_3/figure_2}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/dancer_3/figure_2}
             \caption[]%
             {{\small Network 3}}    
             \label{fig:mean and std of net34}
@@ -121,7 +121,7 @@
         \quad
         \begin{subfigure}[b]{0.475\textwidth}   
             \centering 
-            \includegraphics[width=\textwidth]{img/corpus/dancer_4/figure_2}
+            \includegraphics[width=\textwidth]{\lpath/img/corpus/dancer_4/figure_2}
             \caption[]%
             {{\small Network 4}}    
             \label{fig:mean and std of net44}
@@ -138,66 +138,66 @@
     \vspace{-3cm}
 	\centering IMMSB\\
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/1_mmsb/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/expe/1_mmsb/figure_1}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/2_mmsb/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/expe/2_mmsb/figure_1}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/3_mmsb/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/expe/3_mmsb/figure_1}
 	\endminipage
 		\vspace{-0.29cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/1_mmsb/figure_2}
+	\includegraphics[scale=0.27]{\lpath/img/expe/1_mmsb/figure_2}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/2_mmsb/figure_2} 
+	\includegraphics[scale=0.27]{\lpath/img/expe/2_mmsb/figure_2} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/3_mmsb/figure_2}
+	\includegraphics[scale=0.27]{\lpath/img/expe/3_mmsb/figure_2}
 	\endminipage
 		\vspace{-0.28cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/1_mmsb/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/expe/1_mmsb/figure_3}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/2_mmsb/figure_3} 
+	\includegraphics[scale=0.27]{\lpath/img/expe/2_mmsb/figure_3} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/3_mmsb/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/expe/3_mmsb/figure_3}
 	\endminipage
 
     \vspace{0.2cm}
 	 ILFM
 
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/1_ibp/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/expe/1_ibp/figure_1}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/2_ibp/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/expe/2_ibp/figure_1}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/3_ibp/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/expe/3_ibp/figure_1}
 	\endminipage
 		\vspace{-0.29cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/1_ibp/figure_2}
+	\includegraphics[scale=0.27]{\lpath/img/expe/1_ibp/figure_2}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/2_ibp/figure_2} 
+	\includegraphics[scale=0.27]{\lpath/img/expe/2_ibp/figure_2} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/3_ibp/figure_2}
+	\includegraphics[scale=0.27]{\lpath/img/expe/3_ibp/figure_2}
 	\endminipage
 		\vspace{-0.28cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/1_ibp/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/expe/1_ibp/figure_3}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/2_ibp/figure_3} 
+	\includegraphics[scale=0.27]{\lpath/img/expe/2_ibp/figure_3} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/3_ibp/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/expe/3_ibp/figure_3}
 	\endminipage
     \caption{Network 1,2 and 3}
 
@@ -207,66 +207,66 @@
     \vspace{-3cm}
 	\centering IMMSB\\
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/4_mmsb/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/expe/4_mmsb/figure_1}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/5_mmsb/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/expe/5_mmsb/figure_1}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/6_mmsb/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/expe/6_mmsb/figure_1}
 	\endminipage
 		\vspace{-0.29cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/4_mmsb/figure_2}
+	\includegraphics[scale=0.27]{\lpath/img/expe/4_mmsb/figure_2}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/5_mmsb/figure_2} 
+	\includegraphics[scale=0.27]{\lpath/img/expe/5_mmsb/figure_2} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/6_mmsb/figure_2}
+	\includegraphics[scale=0.27]{\lpath/img/expe/6_mmsb/figure_2}
 	\endminipage
 		\vspace{-0.28cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/4_mmsb/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/expe/4_mmsb/figure_3}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/6_mmsb/figure_3} 
+	\includegraphics[scale=0.27]{\lpath/img/expe/6_mmsb/figure_3} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/6_mmsb/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/expe/6_mmsb/figure_3}
 	\endminipage
 
     \vspace{0.2cm}
 	 ILFM
 
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/4_ibp/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/expe/4_ibp/figure_1}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/5_ibp/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/expe/5_ibp/figure_1}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/6_ibp/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/expe/6_ibp/figure_1}
 	\endminipage
 		\vspace{-0.29cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/4_ibp/figure_2}
+	\includegraphics[scale=0.27]{\lpath/img/expe/4_ibp/figure_2}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/5_ibp/figure_2} 
+	\includegraphics[scale=0.27]{\lpath/img/expe/5_ibp/figure_2} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/6_ibp/figure_2}
+	\includegraphics[scale=0.27]{\lpath/img/expe/6_ibp/figure_2}
 	\endminipage
 		\vspace{-0.28cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/4_ibp/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/expe/4_ibp/figure_3}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/5_ibp/figure_3} 
+	\includegraphics[scale=0.27]{\lpath/img/expe/5_ibp/figure_3} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/expe/6_ibp/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/expe/6_ibp/figure_3}
 	\endminipage
     \caption{Network 4, manufacturing and Facebook}
 
@@ -287,66 +287,66 @@
     \vspace{-3cm}
 	\centering IMMSB\\
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_peaks/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_peaks/figure_1}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_power_law/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_power_law/figure_1}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_regular/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_regular/figure_1}
 	\endminipage
 		\vspace{-0.29cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_peaks/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_peaks/figure_3}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_power_law/figure_3} 
+	\includegraphics[scale=0.27]{\lpath/img/M_g_power_law/figure_3} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_regular/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_regular/figure_3}
 	\endminipage
 		\vspace{-0.28cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_peaks/figure_5}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_peaks/figure_5}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_power_law/figure_5} 
+	\includegraphics[scale=0.27]{\lpath/img/M_g_power_law/figure_5} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_regular/figure_5}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_regular/figure_5}
 	\endminipage
 
     \vspace{0.2cm}
 	 ILFM
 
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/1/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/1/figure_1}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/2/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/2/figure_1}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/3/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/3/figure_1}
 	\endminipage
 		\vspace{-0.29cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/1/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/1/figure_3}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/2/figure_3} 
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/2/figure_3} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/3/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/3/figure_3}
 	\endminipage
 		\vspace{-0.28cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/1/figure_5}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/1/figure_5}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/2/figure_5} 
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/2/figure_5} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/3/figure_5}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/3/figure_5}
 	\endminipage
     \caption{\tiny{Generated Networks with IMMSB (top) and ILFM (bottom) for three different settings (same set than for figure \ref{fig:gen_blocks_mmsb}). The top rows measure the global preferential attachment through the overall degree distribution. The middle row measure the local preferential attachment through the local degree distribution. The last row measure the feature burstiness through the block membership distribution.}}
 	\label{fig:gen_burst}
