fix and conclusion

--- a/short_version/PNAS-main.tex
+++ b/short_version/PNAS-main.tex
@@ -151,6 +151,9 @@ In the typical use of the above models for link prediction, some observations (\
 %\section{Illustration}
 \input{experimentations}
 
+\section{Conclusion}
+In this paper we study two fundamentals properties that arise in social networks in the spectrum of Bayesian models. We proposed a probabilistic formalization of those properties and analyze how models comply with it. We showed how two families of models characterized by they prior on some latent features can conduct either to comply or not with the local preferential attachment as well as the behavior of the homophily within two appropriate similarities.
+
 \bibliographystyle{unsrt}
 \bibliography{./pnas}
 
