--- a/short_version/t/b.tex
+++ b/short_version/t/b.tex
@@ -13,6 +13,6 @@
         \begin{minipage}{0.24\textwidth}
             \includegraphics[width=\textwidth]{img/corpus/manufacturing_1}
         \end{minipage}
-        \caption {Local degree distribution for the artificial networks. Inner(left) and outer(right) degree are separated.} 
+        \caption {Local degree distributions for the artificial networks. Inner(left) and outer(right) degree are separated.} 
 	\label{fig:synt_graph_local}
 \end{figure}
